argo-workflows/manifests/ingress_argo-workflows.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port:
              name: web
    host: argo-workflows.lab.hvlck.xyz
  tls:
  - hosts:
    - argo-workflows.lab.hvlck.xyz
    secretName: argo-workflows-ingress-tls
